--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
   redis:
     image: redis:alpine
-  postgis:
+  postgres:
     image: mdillon/postgis
     environment:
       POSTGRES_USER: patrick
@@ -12,15 +12,11 @@ services:
         source: ./atlas_of_thrones.sql
         target: /docker-entrypoint-initdb.d/atlas_of_thrones.sql
   atlas:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    volumes:
-      - .:/usr/src/atlas-of-thrones
+    build: .
     ports:
       - "5000:5000"
       - "8080:8080"
     depends_on:
       - redis
-      - postgis
-    command: ./wait-for.sh postgis:5432 -- npm run dev
+      - postgres
+    command: ./wait-for.sh postgres:5432 -- npm run dev
